--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -311,6 +311,10 @@ aws:
       use_credentials:
         - default
         - account-bar
+    route53:
+      use_credentials:
+        - default
+        - account-bar
 
   # The `credentials' section provides named credentials, which are used by the
   # various AWS services. The currently supported token retrievers are `none',
@@ -474,6 +478,12 @@ scheduler:
     - name: "aws:task:collect-net-interfaces"
       spec: "@every 1h"
       desc: "Collect AWS Network Interfaces"
+    - name: "aws:task:collect-hosted-zones"
+      spec: "@every 1h"
+      desc: "Collect AWS DNS Hosted Zones"
+    - name: "aws:task:collect-dns-records"
+      spec: "@every 1h"
+      desc: "Collect AWS DNS Records"
     - name: "aws:task:link-all"
       spec: "@every 30m"
       desc: "Link all AWS models"
