feat(gardener/bastion): update examples/config.yaml

--- a/deployment/kustomize/config/secrets/config.yaml
+++ b/deployment/kustomize/config/secrets/config.yaml
@@ -63,7 +63,7 @@ vault:
       token_auth:
         token_path: /path/to/my/token
 
-    # # Production Vault server example
+    # Production Vault server example
     # vault-prod:
     #   # Endpoint of the Vault server
     #   endpoint: https://vault.example.org:8200/
@@ -92,6 +92,10 @@ vault:
     #     role_name: my-role-name
     #     # Path to a JWT token to use for logging into Vault
     #     token_path: /path/to/my/jwt/token
+    #     # Name of env var from which to read the JWT token when logging into
+    #     # Vault. JWT token from env var takes precedence over a JWT provided
+    #     # from path.
+    #     # token_env: MY_JWT_TOKEN
 
 # Worker settings
 worker:
@@ -307,6 +311,10 @@ aws:
       use_credentials:
         - default
         - account-bar
+    route53:
+      use_credentials:
+        - default
+        - account-bar
 
   # The `credentials' section provides named credentials, which are used by the
   # various AWS services. The currently supported token retrievers are `none',
@@ -470,6 +478,12 @@ scheduler:
     - name: "aws:task:collect-net-interfaces"
       spec: "@every 1h"
       desc: "Collect AWS Network Interfaces"
+    - name: "aws:task:collect-hosted-zones"
+      spec: "@every 1h"
+      desc: "Collect AWS DNS Hosted Zones"
+    - name: "aws:task:collect-dns-records"
+      spec: "@every 1h"
+      desc: "Collect AWS DNS Records"
     - name: "aws:task:link-all"
       spec: "@every 30m"
       desc: "Link all AWS models"
@@ -496,6 +510,12 @@ scheduler:
     - name: "g:task:collect-persistent-volumes"
       spec: "@every 1h"
       desc: "Collect Gardener Persistent Volumes"
+    - name: "g:task:collect-dns-records"
+      spec: "@every 1h"
+      desc: "Collect Gardener DNSRecords"
+    - name: "g:task:collect-bastions"
+      spec: "@every 1h"
+      desc: "Collect Gardener Bastions"
     - name: "g:task:link-all"
       spec: "@every 30m"
       desc: "Link all Gardener models"
@@ -653,6 +673,10 @@ scheduler:
           - name: "g:model:cloud_profile_azure_image"
             duration: 24h
           - name: "g:model:cloud_profile_openstack_image"
+            duration: 24h
+          - name: "g:model:dns_record"
+            duration: 24h
+          - name: "g:model:bastion"
             duration: 24h
           # GCP
           - name: "gcp:model:project"
