--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -513,6 +513,9 @@ scheduler:
     - name: "g:task:collect-dns-records"
       spec: "@every 1h"
       desc: "Collect Gardener DNSRecords"
+    - name: "g:task:collect-bastions"
+      spec: "@every 1h"
+      desc: "Collect Gardener Bastions"
     - name: "g:task:link-all"
       spec: "@every 30m"
       desc: "Link all Gardener models"
@@ -672,6 +675,8 @@ scheduler:
           - name: "g:model:cloud_profile_openstack_image"
             duration: 24h
           - name: "g:model:dns_record"
+            duration: 24h
+          - name: "g:model:bastion"
             duration: 24h
           # GCP
           - name: "gcp:model:project"
