feat(gcp/iam-policy): update examples config

--- a/deployment/kustomize/config/secrets/config.yaml
+++ b/deployment/kustomize/config/secrets/config.yaml
@@ -551,6 +551,9 @@ scheduler:
     - name: "gcp:task:collect-target-pools"
       spec: "@every 1h"
       desc: "Collect Target Pools"
+    - name: "gcp:task:collect-iam-policies"
+      spec: "@every 1h"
+      desc: "Collect IAM Policies"
     - name: "gcp:task:link-all"
       spec: "@every 30m"
       desc: "Link all GCP models"
@@ -704,6 +707,12 @@ scheduler:
           - name: "gcp:model:target_pool"
             duration: 24h
           - name: "gcp:model:target_pool_instance"
+            duration: 24h
+          - name: "gcp:model:iam_policy"
+            duration: 24h
+          - name: "gcp:model:iam_binding"
+            duration: 24h
+          - name: "gcp:model:iam_role_member"
             duration: 24h
           # Azure
           - name: "az:model:subscription"
