config(examples): update configs with latest models/tasks

--- a/deployment/kustomize/config/secrets/config.yaml
+++ b/deployment/kustomize/config/secrets/config.yaml
@@ -484,6 +484,9 @@ scheduler:
     - name: "aws:task:collect-dns-records"
       spec: "@every 1h"
       desc: "Collect AWS DNS Records"
+    - name: "aws:task:collect-dhcp-option-sets"
+      spec: "@every 1h"
+      desc: "Collect AWS DHCP Option Sets"
     - name: "aws:task:link-all"
       spec: "@every 30m"
       desc: "Link all AWS models"
@@ -627,6 +630,10 @@ scheduler:
     - name: "openstack:task:collect-volumes"
       spec: "@every 1h"
       desc: "Collect OpenStack Volumes"
+    - name: "openstack:task:link-all"
+      spec: "@every 1h"
+      desc: "Link all OpenStack models"
+
 
     # Auxiliary task
     #
@@ -677,7 +684,11 @@ scheduler:
             duration: 24h
           - name: "g:model:cloud_profile_openstack_image"
             duration: 24h
+          - name: "g:model:persistent_volumes"
+            duration: 24h
           - name: "g:model:dns_record"
+            duration: 24h
+          - name: "g:model:dns_entry"
             duration: 24h
           - name: "g:model:bastion"
             duration: 24h
@@ -763,6 +774,8 @@ scheduler:
           - name: "openstack:model:pool_member"
             duration: 24h
           - name: "openstack:model:loadbalancer_with_pool"
+            duration: 24h
+          - name: "openstack:model:container"
             duration: 24h
           - name: "openstack:model:volume"
             duration: 24h
