--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,8 +8,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
+
+      - uses: actions/checkout@v6
+      - uses: actions/setup-go@v6
         with:
           go-version: '1.25'
       - name: Run linter
@@ -24,6 +25,10 @@ jobs:
         run: |
           set -eu
           make build
+      - name: Clean Go cache
+        run: |
+          set -eu
+          go clean -cache -modcache -testcache -fuzzcache
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build OCI image
