config(dependabot): add labels to PRs. This fixes the do-not-merge/needs-kind status (label) from Prow

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,8 @@ updates:
       - dependency-name: github.com/gardener/*
         versions:
           - "*"
+    labels:
+    - kind/enhancement
 
   # Create PRs for tool updates
   - package-ecosystem: gomod
@@ -20,6 +22,8 @@ updates:
       interval: weekly
     commit-message:
       prefix: "tools: "
+    labels:
+    - kind/enhancement
 
   # Create PRs for golang version updates
   - package-ecosystem: docker
@@ -28,3 +32,5 @@ updates:
       interval: weekly
     commit-message:
       prefix: "deps:"
+    labels:
+    - kind/enhancement
