--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,11 +13,11 @@ jobs:
 
   publish-oci:
     uses: ./.github/workflows/oci-images.yaml
+    secrets: inherit
     permissions:
       contents: read
       packages: write
       id-token: write
-      pull-requests: write
     needs:
       - test
     with:
@@ -29,11 +29,8 @@ jobs:
       contents: write
       packages: write
       id-token: write
-      pull-requests: write
     needs:
       - publish-oci
-    secrets:
-      github-app-secret-key: ${{ secrets.GARDENER_GITHUB_ACTIONS_PRIVATE_KEY }}
     with:
       release-commit-target: branch
       next-version: bump-patch
